Adds unit tests